Make the builder work with Java 17 Compare the cell text with the full selection text when checking if a table cell is fully or partially selected. Don't shrink the selection if it's fake (in balloontoolbar's ContextManager) Upgrade some deps to be able to run the tests